// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter 1`] = `
Object {
  "actions": Array [
    "sold",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.39495711579265108115",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x9273b71cfd60e022c2107d5bcf5ee62a88346550",
      "amount": "0.000458161052",
      "name": "Kingdom Token",
      "symbol": "KINGDOM",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0xdcde sold 0.071782049366433048 ETH of KINGDOM on Uniswap V2",
  "extra": Object {
    "ethValueReceived": "0.071782049366433048",
    "tokenAmount": "0.000458161051962122",
    "tokenName": "KINGDOM",
  },
  "gasPaid": "0.03127220866447174",
  "reverted": null,
  "timestamp": 1638316845,
  "txHash": "0xd7be990f8849ec0b74d86fbda86eaf4c0cb25b814fb1ab9d2f056705b2fdfba6",
  "userAddress": "0xdcdee85472e19a9a1bba1b9c524c6105c727f3d6",
  "userName": "0xdcde",
}
`;

exports[`Interpreter 2`] = `
Object {
  "actions": Array [
    "bought",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xfad45e47083e4607302aa43c65fb3106f1cd7607",
      "amount": "0.011567525893",
      "name": "hoge.finance",
      "symbol": "HOGE",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "1",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "thememelord.eth bought 1.0 ETH of HOGE on Uniswap V2",
  "extra": Object {
    "ethValueSent": "1.0",
    "tokenAmount": "0.011567525892826453",
    "tokenName": "HOGE",
  },
  "gasPaid": "0.023564857708634499",
  "reverted": null,
  "timestamp": 1638316845,
  "txHash": "0x32706fd90e141319710989feb555d6c9e394b1788802df6281d257cda0701c84",
  "userAddress": "0x10fced9a7c5d1ae7186d5e5912b73d47c1283d65",
  "userName": "thememelord.eth",
}
`;

exports[`Interpreter 3`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x9273b71cfd60e022c2107d5bcf5ee62a88346550",
      "amount": "0.000202899041",
      "name": "Kingdom Token",
      "symbol": "KINGDOM",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "900.0",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x4090 swapped 0.0000000009 USDC for 0.000202899041047771 KINGDOM on Uniswap V2",
  "extra": Object {
    "tokenAmount0": "0.0000000009",
    "tokenAmount1": "0.000202899041047771",
    "tokenName0": "USDC",
    "tokenName1": "KINGDOM",
  },
  "gasPaid": "0.026273653630187205",
  "reverted": null,
  "timestamp": 1638316845,
  "txHash": "0xb684992cdec31d2eeaf3866be82ddd2a9cfe2211bab96b1aa132d3a9ae50587b",
  "userAddress": "0x4090bd947f70b9b8c9522faa0d2f7f9bbb4b2377",
  "userName": "0x4090",
}
`;

exports[`Interpreter 4`] = `
Object {
  "actions": Array [
    "added liquidity",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xc7b7dac697b03e11e4af085d927f0c9b24b3f27d",
      "amount": "3162277.660168379545",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xb56a1f3310578f23120182fb2e58c087efe6e147",
      "amount": "1000000000000.0",
      "name": "AllCoinsYieldCapital",
      "symbol": "ACYC",
      "type": "ERC20",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "10",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x8b7b added liquidity to the ACYC-ETH Uniswap V2 pool",
  "extra": Object {
    "token_0": "ACYC",
  },
  "gasPaid": "0.037819919756787315",
  "reverted": null,
  "timestamp": 1638316877,
  "txHash": "0xb78ce1e0f55e78cf005b4b5af9978b3d20292dc8c88c94f7ecade67083e2b97f",
  "userAddress": "0x8b7b8448243559a5daa98a22cb6982796bce4271",
  "userName": "0x8b7b",
}
`;

exports[`Interpreter 5`] = `
Object {
  "actions": Array [
    "removed liquidity",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xb7b284c2ea09c637daa2f128a8756280a9bd9091",
      "amount": "0.001868562428",
      "name": "Kakashi",
      "symbol": "KAKASHI",
      "type": "ERC20",
    },
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "4.356835431802",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xbe2cee7429e427c262e73ea074bef59c6ad1d93b",
      "amount": "0.093937438885",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0x888a removed liquidity from the KAKASHI-WETH Uniswap V2 pool",
  "extra": Object {
    "token_0": "KAKASHI",
    "token_1": "WETH",
  },
  "gasPaid": "0.029644983060867926",
  "reverted": null,
  "timestamp": 1638318188,
  "txHash": "0x967963d6eaad9e65d567cac325728d79aeaa319b1453e05ec55734f3b08445ec",
  "userAddress": "0x888ae876e588cd29715ab2b4a6ecce0bc2e44655",
  "userName": "0x888a",
}
`;

exports[`Interpreter 6`] = `
Object {
  "actions": Array [
    "removed liquidity",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x3845badade8e6dff049820680d1f14bd3903a5d0",
      "amount": "4456.80372126116",
      "name": "SAND",
      "symbol": "SAND",
      "type": "ERC20",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "6.53802974717997642529",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x3dd49f67e9d5bc4c5e6634b3f70bfd9dc1b6bd74",
      "amount": "123.932818358485",
      "name": "Uniswap V2",
      "symbol": "UNI-V2",
      "type": "LPToken",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7a250d5630b4cf539739df2c5dacb4c659f2488d",
  "contractName": "Uniswap V2",
  "counterpartyName": null,
  "exampleDescription": "0xc712 removed liquidity from the SAND-ETH Uniswap V2 pool",
  "extra": Object {
    "ethValueReceived": "6.538029747179976387",
    "token_0": "SAND",
  },
  "gasPaid": "0.032858980114895286",
  "reverted": null,
  "timestamp": 1638318377,
  "txHash": "0x3dd8f41c008a6ce59ca8d2b24df700dc4441d0a83747b9b7c0587449a2e7c9ca",
  "userAddress": "0xc712b31175906564bb41a7b84169bd4a9b522011",
  "userName": "0xc712",
}
`;

exports[`Interpreter 7`] = `
Object {
  "actions": Array [
    "bought",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x97e41d5ce9c8cb1f83947ef82a86e345aed673f3",
      "name": "The Ninja Hideout",
      "symbol": "TNH",
      "tokenId": "228",
      "type": "ERC721",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.05",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7f268357a8c2552623316e2562d90e642bb538e5",
  "contractName": "OpenSea",
  "counterpartyName": null,
  "exampleDescription": "0x96a6 bought The Ninja Hideout #228 on OpenSea for 0.05 ETH",
  "extra": Object {
    "NFT": "The Ninja Hideout",
    "tokenId": "#228",
  },
  "gasPaid": "0.00837078350034528",
  "reverted": null,
  "timestamp": 1656089719,
  "txHash": "0xc814cb6b61222beda8a9bcc359e776e72ae732a1c29df572099ecef27c8461e4",
  "userAddress": "0x96a675775b8546a8602a1015efaacbc87358e478",
  "userName": "0x96a6",
}
`;

exports[`Interpreter 8`] = `
Object {
  "actions": Array [
    "sold",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.04624999999999999944",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x97e41d5ce9c8cb1f83947ef82a86e345aed673f3",
      "name": "The Ninja Hideout",
      "symbol": "TNH",
      "tokenId": "228",
      "type": "ERC721",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.0",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7f268357a8c2552623316e2562d90e642bb538e5",
  "contractName": "OpenSea",
  "counterpartyName": null,
  "exampleDescription": "0x83eb sold The Ninja Hideout #228 on OpenSea for 0.04624999999999999944 ETH",
  "extra": Object {
    "NFT": "The Ninja Hideout",
    "tokenId": "#228",
  },
  "gasPaid": "0.00837078350034528",
  "reverted": null,
  "timestamp": 1656089719,
  "txHash": "0xc814cb6b61222beda8a9bcc359e776e72ae732a1c29df572099ecef27c8461e4",
  "userAddress": "0x83eb387c8f7c8903f2be1ca367197fc4b3cb573e",
  "userName": "0x83eb",
}
`;

exports[`Interpreter 9`] = `
Object {
  "actions": Array [
    "repaid",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [
    Object {
      "address": "0x00ad8ebf64f141f1c81e9f8f792d3d1631c6c684",
      "amount": "314305.817611832346",
      "name": "Aave variable debt bearing CRV",
      "symbol": "variableDebtCRV",
      "type": "ERC20",
    },
    Object {
      "address": "0xd533a949740bb3306d119cc777fa900ba034cd52",
      "amount": "314305.817611832346",
      "name": "Curve DAO Token",
      "symbol": "CRV",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0xd8a3 repaid 314305.817611832341382659 CRV to Aave V2",
  "extra": Object {
    "tokenAmount": "314305.817611832341382659",
    "tokenSymbol": "CRV",
  },
  "gasPaid": "0.012144212798965408",
  "reverted": null,
  "timestamp": 1656357349,
  "txHash": "0xdf2f782ab0296121318cca140ef069f9f074c51ff4b11f0c677bcb01126f81de",
  "userAddress": "0xd8a3785869f3fc0f0019ec8e9f649b4c43a33383",
  "userName": "0xd8a3",
}
`;

exports[`Interpreter 10`] = `
Object {
  "actions": Array [
    "deposited",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x3ed3b47dd13ec9a98b44e6204a523e766b225811",
      "amount": "0.0000000028",
      "name": "Aave interest bearing USDT",
      "symbol": "aUSDT",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "amount": "2800.0",
      "name": "Tether USD",
      "symbol": "USDT",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0x88a9 deposited 0.0000000028 USDT into Aave V2",
  "extra": Object {
    "tokenAmount": "0.0000000028",
    "tokenSymbol": "USDT",
  },
  "gasPaid": "0.015157096544929638",
  "reverted": null,
  "timestamp": 1656358062,
  "txHash": "0x24ee705da17a6061091880f47335d92950c72398980e271cdb9c69e8502827f4",
  "userAddress": "0x88a902adc0ff5bfe283d8d2365b51de6bc5e1666",
  "userName": "0x88a9",
}
`;

exports[`Interpreter 11`] = `
Object {
  "actions": Array [
    "withdrew",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
      "amount": "666.977520147508",
      "name": "ChainLink Token",
      "symbol": "LINK",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xa06bc25b5805d5f8d82847d191cb4af5a3e873e0",
      "amount": "666.977520147508",
      "name": "Aave interest bearing LINK",
      "symbol": "aLINK",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0xf8fb withdrew 666.977520147507670024 LINK from Aave V2",
  "extra": Object {
    "tokenAmount": "666.977520147507670024",
    "tokenSymbol": "LINK",
  },
  "gasPaid": "0.018113192687317666",
  "reverted": null,
  "timestamp": 1657056840,
  "txHash": "0x8df7e436048d687edfaf351e913783729eeaa9ece741391b2a8428d6b7762fe1",
  "userAddress": "0xf8fb4a59846217eea1a15f5b776bf0b76b28ee67",
  "userName": "0xf8fb",
}
`;

exports[`Interpreter 12`] = `
Object {
  "actions": Array [
    "borrowed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x619beb58998ed2278e08620f97007e1116d5d25b",
      "amount": "0.0000000025",
      "name": "Aave variable debt bearing USDC",
      "symbol": "variableDebtUSDC",
      "type": "ERC20",
    },
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "2500.0",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0x7d2768de32b0b80b7a3454c06bdac94a69ddc7a9",
  "contractName": "Aave V2",
  "counterpartyName": null,
  "exampleDescription": "0x7ca2 borrowed 0.0000000025 USDC from Aave V2",
  "extra": Object {
    "tokenAmount": "0.0000000025",
    "tokenSymbol": "USDC",
  },
  "gasPaid": "0.008698857193849088",
  "reverted": null,
  "timestamp": 1657056614,
  "txHash": "0x564544c9aef01836615254504677b91a9ef96d5ae15eac50d98e08774ed1096c",
  "userAddress": "0x7ca2491e5aec98fa36d917ffa57f599c530564b8",
  "userName": "0x7ca2",
}
`;

exports[`Interpreter 13`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "150.286887655179",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "280376.616697999998",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x5596 swapped 0.000000280376616698 USDC for 150.286887655178993883 WETH on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "0.000000280376616698",
    "tokenAmount1": "150.286887655178993883",
    "tokenName0": "USDC",
    "tokenName1": "WETH",
  },
  "gasPaid": "0.07226057005959764",
  "reverted": null,
  "timestamp": 1654532279,
  "txHash": "0xe4737f2b6174dfcc9482a50aacdc0a919f12c14ede767d6dbfc2cd502747e4f5",
  "userAddress": "0x55961e9fc41c07c13ec0c7103b3d34c0ae32c2eb",
  "userName": "0x5596",
}
`;

exports[`Interpreter 14`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "189.236064",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x7d647b1a0dcd5525e9c6b3d14be58f27674f8c95",
      "amount": "115.0",
      "name": "BYTES",
      "symbol": "BYTES",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xe592427a0aece92de3edee1f18e0157c05861564",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x7691 swapped 115.0 BYTES for 0.000000000189236064 USDC on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "115.0",
    "tokenAmount1": "0.000000000189236064",
    "tokenName0": "BYTES",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.01376121884064768",
  "reverted": null,
  "timestamp": 1656530683,
  "txHash": "0xf41a45f5347db0d95bfac48325f8272dce56782574e91083e5025324928bc40c",
  "userAddress": "0x76914474c1e922aa1166b1d073373b3b1a2dab47",
  "userName": "0x7691",
}
`;

exports[`Interpreter 15`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x9e32b13ce7f2e80a01932b42553652e053d6ed8e",
      "amount": "200.0",
      "name": "Metis Token",
      "symbol": "Metis",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
      "amount": "2.127028966432",
      "name": "Wrapped Ether",
      "symbol": "WETH",
      "type": "unknown",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x613a swapped 2.127028966431723238 WETH for 200.0 Metis on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "2.127028966431723238",
    "tokenAmount1": "200.0",
    "tokenName0": "WETH",
    "tokenName1": "Metis",
  },
  "gasPaid": "0.00946193638459496",
  "reverted": null,
  "timestamp": 1654095700,
  "txHash": "0xce57de79e8898075e6512492b47661abd8e74eeffe4760cd43c054b53480b583",
  "userAddress": "0x613a3870f58893d760e942d0f9ec2e3f1772d336",
  "userName": "0x613a",
}
`;

exports[`Interpreter 16`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
      "amount": "0.1",
      "name": "Uniswap",
      "symbol": "UNI",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xdac17f958d2ee523a2206206994597c13d831ec7",
      "amount": "1.767773",
      "name": "Tether USD",
      "symbol": "USDT",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x68b3465833fb72a70ecdf485e0e4c7bd8665fc45",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x5c4f swapped 0.000000000001767773 USDT for 0.1 UNI on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "0.000000000001767773",
    "tokenAmount1": "0.1",
    "tokenName0": "USDT",
    "tokenName1": "UNI",
  },
  "gasPaid": "0.017258154195087624",
  "reverted": null,
  "timestamp": 1642499895,
  "txHash": "0x26854093b17b25f74bcdb8728a6c8d113e68aa69f2ae2463f9c14788df53aa45",
  "userAddress": "0x5c4f3b99c6c7be04bb2eac3f7bed560da85e0797",
  "userName": "0x5c4f",
}
`;

exports[`Interpreter 17`] = `
Object {
  "actions": Array [
    "swapped",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.38916226204018605772",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xe5a3229ccb22b6484594973a03a3851dcd948756",
      "amount": "340.4597021",
      "name": "RAE Token",
      "symbol": "RAE",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xe592427a0aece92de3edee1f18e0157c05861564",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0xa5c1 swapped 340.4597021 RAE for 0.389162262040186058 WETH on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "340.4597021",
    "tokenAmount1": "0.389162262040186058",
    "tokenName0": "RAE",
    "tokenName1": "WETH",
  },
  "gasPaid": "0.0150073576790652",
  "reverted": null,
  "timestamp": 1656531693,
  "txHash": "0x5efd5c0a1d3b1a0b42456aae4fc552e0924d8153f68196b011ef933b94614246",
  "userAddress": "0xa5c11f25f7b8eeaa531d31f4094e0f5b6e43a820",
  "userName": "0xa5c1",
}
`;

exports[`Interpreter 18`] = `
Object {
  "actions": Array [
    "burned",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "260993",
      "type": "ERC721",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x0b96 burned Uniswap V3 liquidity position NFT #0.000000000000260993",
  "extra": Object {
    "tokenId": "0.000000000000260993",
  },
  "gasPaid": "0.002506870245171761",
  "reverted": null,
  "timestamp": 1656483817,
  "txHash": "0x1d2e706317c9457e43d4b0dfe6395c55b518f4f05386d1f455dd6ea984e04ae1",
  "userAddress": "0x0b96c91ab05629be9404746d5a7775f305a4f6a3",
  "userName": "0x0b96",
}
`;

exports[`Interpreter 19`] = `
Object {
  "actions": Array [
    "collected",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x2b591e99afe9f32eaa6214f7b7629768c40eeb39",
      "amount": "0.000000320644",
      "name": "HEX",
      "symbol": "HEX",
      "type": "ERC20",
    },
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "305.165646",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0xb738 collected 0.000000320644118148 HEX and 0.000000000305165646 USDC in fees from Uniswap V3",
  "extra": Object {
    "tokenAmount0": "0.000000320644118148",
    "tokenAmount1": "0.000000000305165646",
    "tokenName0": "HEX",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.006987365045529792",
  "reverted": null,
  "timestamp": 1646028442,
  "txHash": "0x8d696e7ac40e22c25207a6eb3060d840fe4b1b4663fb988500f3bfc311da2a39",
  "userAddress": "0xb7387207cefaeee263817780c60deb9b9742b3c8",
  "userName": "0xb738",
}
`;

exports[`Interpreter 20`] = `
Object {
  "actions": Array [
    "added liquidity",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [
    Object {
      "address": "0x0ab87046fbb341d058f17cbc4c1133f25a20a52f",
      "amount": "6.305593205049",
      "name": "Governance OHM",
      "symbol": "gOHM",
      "type": "ERC20",
    },
    Object {
      "address": "0xc0d4ceb216b3ba9c3701b291766fdcba977cec3a",
      "amount": "0.000000070956",
      "name": "BTRFLY",
      "symbol": "BTRFLY",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x6dd9 added liquidity to the gOHM-BTRFLY pool on Uniswap V3 ",
  "extra": Object {
    "tokenAmount0": "6.305593205049249187",
    "tokenAmount1": "0.000000070956438934",
    "tokenName0": "gOHM",
    "tokenName1": "BTRFLY",
  },
  "gasPaid": "0.00551313628814904",
  "reverted": null,
  "timestamp": 1653349230,
  "txHash": "0xba7e346f46b1f5fa3bbff9868f1b6bf170b8fc8d212d2ad8e6f9fc84acdf30a1",
  "userAddress": "0x6dd91bdab368282dc4ea4f4befc831b78a7c38c0",
  "userName": "0x6dd9",
}
`;

exports[`Interpreter 21`] = `
Object {
  "actions": Array [
    "minted",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "261722",
      "type": "ERC721",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x2260fac5e5542a773aa44fbcfedf7c193bc2c599",
      "amount": "0.000000000202",
      "name": "Wrapped BTC",
      "symbol": "WBTC",
      "type": "ERC20",
    },
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "22999.999914",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x57bd minted an NFT for adding 0.000000000202480816 WBTC and 0.000000022999999914 USDC in liquidity to Uniswap V3",
  "extra": Object {
    "tokenAmount0": "0.000000000202480816",
    "tokenAmount1": "0.000000022999999914",
    "tokenName0": "WBTC",
    "tokenName1": "USDC",
  },
  "gasPaid": "0.012234799351281643",
  "reverted": null,
  "timestamp": 1656585855,
  "txHash": "0x8f97a7c09cb73c4da2de03f21bbf17c01f512a615da51a8bf721c4748b5f8475",
  "userAddress": "0x57bddbe968f67c416b5d97d285c7a48676655dd7",
  "userName": "0x57bd",
}
`;

exports[`Interpreter 22`] = `
Object {
  "actions": Array [
    "removed liquidity",
    "collected",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "287.925265",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "802.57273439268180936779",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x6b92 executed multiple actions on Uniswap V3",
  "extra": Object {
    "tokenName0": "an unknown token",
    "tokenName1": "an unknown token",
  },
  "gasPaid": "0.0102171187901338",
  "reverted": null,
  "timestamp": 1656597816,
  "txHash": "0xb38f55471c5a8539a605287b4116a4bf83a58261b3cfe00bc53337298003b9ae",
  "userAddress": "0x6b92686c40747c85809a6772d0eda8e22a77c60c",
  "userName": "mrbayc.eth",
}
`;

exports[`Interpreter 23`] = `
Object {
  "actions": Array [
    "minted",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
      "name": "Uniswap V3 Positions NFT-V1",
      "symbol": "UNI-V3-POS",
      "tokenId": "261805",
      "type": "ERC721",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "amount": "195105.855359999987",
      "name": "USD Coin",
      "symbol": "USDC",
      "type": "ERC20",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "186.99999999983515",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xc36442b4a4522e871399cd717abdd847ab11fe88",
  "contractName": "Uniswap V3",
  "counterpartyName": null,
  "exampleDescription": "0x0950 minted on Uniswap V3",
  "extra": Object {
    "tokenAmount0": "0.00000019510585536",
    "tokenAmount1": "an unknown amount of",
    "tokenName0": "USDC",
    "tokenName1": "an unknown token",
  },
  "gasPaid": "0.02896727102188826",
  "reverted": null,
  "timestamp": 1656597626,
  "txHash": "0x8dbab0967c491942e748c7fc305a3f9a3b2eb6c54c0dc48e1ba7f43babfc636a",
  "userAddress": "0x0950541696888bcfac9af6a5c479871d3e583cac",
  "userName": "0x0950",
}
`;

exports[`Interpreter 24`] = `
Object {
  "actions": Array [
    "minted",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5",
      "amount": "0.000000136839",
      "name": "Compound Ether",
      "symbol": "cETH",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "27.456475447692352",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x5617 minted 0.000000136838768906 cETH for 27.456475447692351502 ETH using Compound",
  "extra": Object {
    "tokenAmount0": "0.000000136838768906",
    "tokenAmount1": "27.456475447692351502",
  },
  "gasPaid": "0.00675417163658496",
  "reverted": null,
  "timestamp": 1656712377,
  "txHash": "0xbbb448dcb3b7e7216c609a97346d9f0553a29cdc8917a286c2aa00a1ba3fccde",
  "userAddress": "0x56178a0d5f301baf6cf3e1cd53d9863437345bf9",
  "userName": "0x5617",
}
`;

exports[`Interpreter 25`] = `
Object {
  "actions": Array [
    "borrowed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "81.0",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "robertclarke.eth borrowed 81.0 ETH from Compound",
  "extra": Object {
    "tokenAmount": "81.0",
  },
  "gasPaid": "0.00979880143749471",
  "reverted": null,
  "timestamp": 1656709562,
  "txHash": "0x5ced82f63bdbe55eaee49392afca90bf23473ba93d43eb5159e586fa8d343986",
  "userAddress": "0x629d6688dd4546da8935ee1602be62d92b3c5a7c",
  "userName": "robertclarke.eth",
}
`;

exports[`Interpreter 26`] = `
Object {
  "actions": Array [
    "redeemed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "36.48530408897021004577",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5",
      "amount": "0.000000181837",
      "name": "Compound Ether",
      "symbol": "cETH",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x4ddc2d193948926d02f9b1fe9e1daa0718270ed5",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x5617 redeemed 36.485304088970207177 ETH for 0.000000181837058358 cETH using Compound",
  "extra": Object {
    "tokenAmount0": "36.485304088970207177",
    "tokenAmount1": "0.000000181837058358",
  },
  "gasPaid": "0.005135770747021752",
  "reverted": null,
  "timestamp": 1656707454,
  "txHash": "0xdaf683d90248db147b1fb22b3979c1902e7ad57ae1c46bc1f8293601cfa5e154",
  "userAddress": "0x56178a0d5f301baf6cf3e1cd53d9863437345bf9",
  "userName": "0x5617",
}
`;

exports[`Interpreter 27`] = `
Object {
  "actions": Array [
    "minted",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
      "amount": "0.000175811315",
      "name": "Compound ChainLink Token",
      "symbol": "cLINK",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
      "amount": "35404.598209378273",
      "name": "ChainLink Token",
      "symbol": "LINK",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x7779 minted 0.000175811315390231 cLINK for 35404.598209378275431444 LINK using Compound",
  "extra": Object {
    "tokenAmount0": "0.000175811315390231",
    "tokenAmount1": "35404.598209378275431444",
    "tokenSymbol0": "cLINK",
    "tokenSymbol1": "LINK",
  },
  "gasPaid": "0.00638980192409016",
  "reverted": null,
  "timestamp": 1656586902,
  "txHash": "0x37182c6beeed11222cd8a4f81fb897ae6fefb31c64c634fea3a277afdba9dd11",
  "userAddress": "0x777999be819ffecee44a995560a9d0e97780a30c",
  "userName": "0x7779",
}
`;

exports[`Interpreter 28`] = `
Object {
  "actions": Array [
    "borrowed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
      "amount": "20000.0",
      "name": "ChainLink Token",
      "symbol": "LINK",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x0aff borrowed 20000.0 LINK from Compound",
  "extra": Object {
    "tokenAmount": "20000.0",
    "tokenSymbol": "LINK",
  },
  "gasPaid": "0.036063082766711096",
  "reverted": null,
  "timestamp": 1656374164,
  "txHash": "0x669b67fa88c60b07d892f09a87c24dd7bd691bdcbd7b1eb0efd969096067f1a6",
  "userAddress": "0x0aff497bd016000185b1c8302fa98a88ff4a4178",
  "userName": "0x0aff",
}
`;

exports[`Interpreter 29`] = `
Object {
  "actions": Array [
    "redeemed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
      "amount": "5030.925829814346",
      "name": "ChainLink Token",
      "symbol": "LINK",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
      "amount": "0.000024982632",
      "name": "Compound ChainLink Token",
      "symbol": "cLINK",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x50e1 redeemed 5030.925829814346184782 LINK for 0.000024982631778611 cLINK using Compound",
  "extra": Object {
    "tokenAmount0": "5030.925829814346184782",
    "tokenAmount1": "0.000024982631778611",
    "tokenSymbol0": "LINK",
    "tokenSymbol1": "cLINK",
  },
  "gasPaid": "0.010940176923101808",
  "reverted": null,
  "timestamp": 1656520150,
  "txHash": "0x63a27f1f7e10fd37477e3e4c35986adb58daaa4b8ab541909a54cb43b0aed5aa",
  "userAddress": "0x50e1738da6becfb834b26ab8251f58f1e4550d57",
  "userName": "0x50e1",
}
`;

exports[`Interpreter 30`] = `
Object {
  "actions": Array [
    "repaid",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [
    Object {
      "address": "0x514910771af9ca656af840dff83e8264ecf986ca",
      "amount": "158.984206345653",
      "name": "ChainLink Token",
      "symbol": "LINK",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xface851a4921ce59e912d19329929ce6da6eb0c7",
  "contractName": "Compound",
  "counterpartyName": null,
  "exampleDescription": "0x10f6 repaid 158.984206345653112672 LINK to Compound",
  "extra": Object {
    "tokenAmount": "158.984206345653112672",
    "tokenSymbol": "LINK",
  },
  "gasPaid": "0.005041919444771034",
  "reverted": null,
  "timestamp": 1656502555,
  "txHash": "0xc5380c861d5817a30b42442f32f93cdc91e1ca395b607ec4ecd9e9cf5fc3c2b9",
  "userAddress": "0x10f69553c7b482536155cdc8d904ae833ed55f98",
  "userName": "0x10f6",
}
`;

exports[`Interpreter 31`] = `
Object {
  "actions": Array [
    "transferred",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [
    Object {
      "address": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
      "name": null,
      "symbol": null,
      "tokenId": "77827450512977049925405665834974022484034454940950638432846545044999949975083",
      "type": "ERC721",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "mariannedoesnft.eth transferred an ENS domain to 1211171139452549183084136921790.664528309140945391",
  "extra": Object {
    "recipientUser": "1211171139452549183084136921790.664528309140945391",
  },
  "gasPaid": "0.002102285415375633",
  "reverted": null,
  "timestamp": 1657116533,
  "txHash": "0x03daff6bd6d1b9792ff1973a1d5104b14fa76fcea6165eb821076cda7f4b2624",
  "userAddress": "0x8e497d816a3fbe78527a7fed80027927285813ee",
  "userName": "mariannedoesnft.eth",
}
`;

exports[`Interpreter 32`] = `
Object {
  "actions": Array [
    "set approval",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "veryboredape.eth set approval for 171276123239216397485782161645.482711224013569137 to control an ENS domain",
  "extra": Object {
    "operatorUser": "171276123239216397485782161645.482711224013569137",
  },
  "gasPaid": "0.00192759016795774",
  "reverted": null,
  "timestamp": 1657116688,
  "txHash": "0xfc52130191555ad7892906f1d018945b7b45034fb200dbe6945579fef6fe07b5",
  "userAddress": "0x17a77d63765963d0cb9dec12fa8f62e68fee8fd4",
  "userName": "veryboredape.eth",
}
`;

exports[`Interpreter 33`] = `
Object {
  "actions": Array [
    "reclaimed",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "revery.eth reclaimed an ENS domain",
  "extra": Object {},
  "gasPaid": "0.001560464",
  "reverted": null,
  "timestamp": 1657117472,
  "txHash": "0x100ee7ec909ddd63c03d33261f6658b4050216e63c7a87fa2ccfff32c1d4a7e6",
  "userAddress": "0xaf4d9e13dc0f2e2d3ec0a17972db215e77c3f83c",
  "userName": "revery.eth",
}
`;

exports[`Interpreter 34`] = `
Object {
  "actions": Array [
    "registered",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0x57f1887a8bf19b14fc0df6fd9b2acc9af147ea85",
      "name": null,
      "symbol": null,
      "tokenId": "12286167365605814071853261433598271875168515458559594443639135101043030965358",
      "type": "ERC721",
    },
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.00044167547969984299",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.004858430276698273",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x283af0b28c62c092c9727f1ee09c02ca627eb7f5",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "2pc.eth registered i-guns.eth with ENS",
  "extra": Object {
    "domain": "i-guns",
  },
  "gasPaid": "0.015443331375856581",
  "reverted": null,
  "timestamp": 1657121522,
  "txHash": "0xd3f7d0c363f5dc8c7e8d4285afcc0d40063a661075619b09d93105d81200749b",
  "userAddress": "0x87596fc0fdd191ba5b236eefce47a4c4203b2501",
  "userName": "2pc.eth",
}
`;

exports[`Interpreter 35`] = `
Object {
  "actions": Array [
    "renewed",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.00452275662548034391",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "amount": "0.04975032288028379",
      "name": "Ethereum",
      "symbol": "ETH",
      "type": "native",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0x283af0b28c62c092c9727f1ee09c02ca627eb7f5",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "0xf72a renewed their ownership of tfu.eth with ENS",
  "extra": Object {
    "domain": "tfu",
    "recipientUser": "an unknown address",
  },
  "gasPaid": "0.005347699737515274",
  "reverted": null,
  "timestamp": 1657121522,
  "txHash": "0xcc8a09291cf751d8714289ded45a7ae7b7b2d52560ab120f50b75a771e97a969",
  "userAddress": "0xf72aebbd82355ad657333fd9262b5f8966a47f6a",
  "userName": "0xf72a",
}
`;

exports[`Interpreter 36`] = `
Object {
  "actions": Array [
    "set a default ENS name",
  ],
  "assetsReceived": Array [],
  "assetsSent": Array [],
  "chainSymbol": "ETH",
  "contractAddress": "0x084b1c3c81545d370f3634392de611caabff8148",
  "contractName": "ENS",
  "counterpartyName": null,
  "exampleDescription": "0x29f1 set a default ENS name",
  "extra": Object {},
  "gasPaid": "0.00250949028836601",
  "reverted": null,
  "timestamp": 1657121712,
  "txHash": "0x419feb4f564baacf3ca6643ac0a4dc00ee76334cdb6fd17f2ee3929278b86d7c",
  "userAddress": "0x29f1e1445f0212e20d439abac9acabbedd4ac2e7",
  "userName": "0x29f1",
}
`;

exports[`Interpreter 37`] = `
Object {
  "actions": Array [
    "minted",
  ],
  "assetsReceived": Array [
    Object {
      "address": "0xb66a603f4cfe17e3d27b87a8bfcad319856518b8",
      "amount": "0.0",
      "name": "Rarible",
      "symbol": "RARI",
      "type": "ERC20",
    },
  ],
  "assetsSent": Array [
    Object {
      "address": "0xb66a603f4cfe17e3d27b87a8bfcad319856518b8",
      "amount": "0.0",
      "name": "Rarible",
      "symbol": "RARI",
      "type": "ERC20",
    },
  ],
  "chainSymbol": "ETH",
  "contractAddress": "0xb66a603f4cfe17e3d27b87a8bfcad319856518b8",
  "contractName": "Rarible",
  "counterpartyName": null,
  "exampleDescription": "0x1e80 minted 0.0 RARI from Rarible",
  "extra": Object {},
  "gasPaid": "0.000836130552245292",
  "reverted": null,
  "timestamp": 1657268452,
  "txHash": "0x737a57f5de926d43d2118d4e5fbeb552d68b4b8a68e4f801e1e6641960462b06",
  "userAddress": "0x1e8009784ae24f42cb3c081259395df74f91b614",
  "userName": "0x1e80",
}
`;
